[package]
name = "adventofcode"
version = "0.1.0"
authors = ["jembishop <jembishop@gmail.com>"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "1.9"
itertools = "0.8"
counter = "0.4.3"
cached = "0.11.0"
num_enum = "0.4.2" 
num = "0.1.28"
regex = "1.3.1"
lazy_static = "1.4.0"
arrayvec = "0.5.1"
num-bigint = "0.2.3"
device_query = "0.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.7.2"
